WIP: Need app stuff from PLM? :(

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "Compubility",
     "license": "ISC",
     "dependencies": {
+        "@apollo/datasource-rest": "^6.0.1",
         "@apollo/server": "^4.6.0",
         "esbuild": "0.17.16",
         "graphql": "^16.6.0"
