--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@victor-optimizely/turnstiles-users-graph",
+    "name": "@victor-optimizely/common-services-feedback-graph",
     "version": "0.0.1",
-    "description": "Turnstile users subgraph.",
+    "description": "Feedback Subgraph.",
     "main": "index.js",
     "scripts": {
         "test": "npm run compile && node --experimental-vm-modules node_modules/jest/bin/jest.js",
@@ -14,8 +14,10 @@
     "dependencies": {
         "@apollo/datasource-rest": "^6.0.1",
         "@apollo/server": "^4.6.0",
+        "apollo-datasource-mongodb": "^0.5.4",
         "esbuild": "0.17.16",
-        "graphql": "^16.6.0"
+        "graphql": "^16.6.0",
+        "mongodb": "^5.6.0"
     },
     "devDependencies": {
         "@types/jest": "^29.5.0",
@@ -24,6 +26,7 @@
         "prettier": "2.8.8",
         "supertest": "^6.3.3",
         "ts-jest": "^29.1.0",
+        "ts-loader": "^9.4.4",
         "ts-node": "^10.9.1",
         "typescript": "^5.0.4"
     }
