remove test script

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "description": "Feedback Subgraph.",
     "main": "index.js",
     "scripts": {
-        "test": "npm run compile && node --experimental-vm-modules node_modules/jest/bin/jest.js",
+        "test:fix-me": "npm run compile && node --experimental-vm-modules node_modules/jest/bin/jest.js",
         "compile": "tsc",
+        "docker:build": "docker build -t common-services/feedback-graph:local .",
+        "docker:run": "docker run -ti common-services/feedback-graph:local sh",
         "start": "npm run compile && node ./dist/index.js"
     },
     "type": "module",
