--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@apollo/datasource-rest": "^6.0.1",
         "@apollo/server": "^4.6.0",
+        "@apollo/subgraph": "^2.4.9",
         "apollo-datasource-mongodb": "^0.5.4",
         "esbuild": "0.17.16",
         "graphql": "^16.6.0",
